Fixed overflow and add up to 200 tracks displayed

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ html, body, img, dl, dt, dd {
 h1, h2, h3, h4 {
 	margin: 0;
 	padding: 0;
+	font-family: "Avenir Next", Trebuchet MS, Arial;
+	font-weight: normal;
+	color: #fff;
+	line-height: 22px;
 }
 
 #frame {
@@ -29,7 +33,9 @@ h1, h2, h3, h4 {
 }
 
 #results {
+	position: absolute;
 	display: none;
+	overflow: hidden;
 }
 
 .thumbnail, .cover {
@@ -60,22 +66,18 @@ h1, h2, h3, h4 {
 }
 
 .track-information {
-	width: 100%;
-	z-index: 1000;
+	display: block;
 	position: absolute;
+	z-index: 1000;
 	padding: 20px;
+	overflow: hidden;
 }
 .track-information h1 {
-	font-weight: normal;
-	font-family: Avenir;
-	font-size: 16px;
-	color: #FFFFFF;
-	line-height: 22px;
+	font-size: 18px;
 }
 .track-information h2 {
-	font-weight: normal;
-	font-family: Avenir;
 	font-size: 15px;
-	color: #FFFFFF;
-	line-height: 22px;
+}
+.track-information h2 em{
+	font-size: 14px;
 }
